--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>driangang</title> <!-- tapped by nz#1000 back in 2020 march -->
+        <title>driangang</title> 
         <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:200&display=swap" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
