--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 //background-image: url("https://i.pinimg.com/originals/47/0a/19/470a19a36904fe200610cc1f41eb00d9.jpg");
                 //background-size: 100% 100%;
                 //background-repeat: no-repeat;
-                background: radial-gradient(ellipse at bottom, #722f8a 0%, #090a0f 100%);
+                background: radial-gradient(ellipse at bottom, #8a2f2f 0%, #471015 100%);
                 overflow: hidden;
                 font-family: Barlow Condensed, sans-serif;
                 user-select: none;
