--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             }
             
             h1 {
-                color: block;
+                color: black;
                 font-size: 50px;
-                text-shadow: 0px 0px 15px block;
+                text-shadow: 0px 0px 15px white;
                 letter-spacing: 12px;
             }
             
