--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 //background-image: url("https://i.pinimg.com/originals/47/0a/19/470a19a36904fe200610cc1f41eb00d9.jpg");
                 //background-size: 100% 100%;
                 //background-repeat: no-repeat;
-                background: radial-gradient(ellipse at bottom, #8a2f2f 0%, #210003 100%);
+                background: radial-gradient(ellipse at bottom, #472f8a 0%, #0d0021 100%);
                 overflow: hidden;
                 font-family: Barlow Condensed, sans-serif;
                 user-select: none;
@@ -194,7 +194,7 @@
         </div>
         </div>
         <div class="textes" onclick="location.href="https://www.youtube.com/watch?v=F5zq4s2x84g";">
-            <marquee onmouseover="this.stop();" onmouseout="this.start();" >Everyone You Know - The Drive </marquee>
+            <marquee onmouseover="this.stop();" onmouseout="this.start();" > <-.-> </marquee>
         </div>
         <script>
             var x = 0;
